--- a/app/src/main/res/layout-land/activity_recommend.xml
+++ b/app/src/main/res/layout-land/activity_recommend.xml
@@ -1,5 +1,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:app2=""
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -19,7 +20,6 @@
         android:layout_height="221dp"
         android:gravity="center"
         android:keepScreenOn="true"
-        android:text="@string/dummy_content"
         android:textColor="#33b5e5"
         android:textSize="50sp"
         android:textStyle="bold" />
@@ -49,21 +49,40 @@
 
         </LinearLayout>
 
-        <ImageView
-            android:layout_width="180dp"
-            android:layout_height="297dp"
-            app:srcCompat="@drawable/robot4"
-            android:id="@+id/imageView5" />
-
     </FrameLayout>
 
     <ImageView
-        android:layout_width="221dp"
-        android:layout_height="192dp"
+        android:layout_width="404dp"
+        android:layout_height="360dp"
+        app:srcCompat="@drawable/robot4"
+        android:id="@+id/imageView5"
+        android:layout_gravity="center_vertical" />
+
+    <ImageView
+        android:layout_width="367dp"
+        android:layout_height="254dp"
         app:srcCompat="@drawable/itachosushi"
         android:id="@+id/imageView"
-        android:cropToPadding="true"
         android:adjustViewBounds="true"
         android:layout_gravity="right" />
+
+    <Button
+        android:text="Menu"
+        android:layout_width="127dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/button2"
+        android:elevation="0dp"
+        android:layout_gravity="right|center_vertical"
+        android:layout_marginTop="5dp" />
+
+    <Button
+        android:text="Menu"
+        android:layout_width="127dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/button"
+        android:elevation="0dp"
+        android:layout_gravity="right|center_vertical"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="123dp" />
 
 </FrameLayout>
