--- a/app/src/main/res/layout-land/activity_recommend.xml
+++ b/app/src/main/res/layout-land/activity_recommend.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0099cc"
+    android:background="#62cdba"
     tools:context="com.companio.recommend.RecommendActivity">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
@@ -39,32 +39,9 @@
             android:orientation="horizontal"
             tools:ignore="UselessParent">
 
-            <Button
-                android:id="@+id/dummy_button"
-                style="?metaButtonBarButtonStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/dummy_button" />
-
         </LinearLayout>
 
     </FrameLayout>
-
-    <ImageView
-        android:layout_width="404dp"
-        android:layout_height="360dp"
-        app:srcCompat="@drawable/robot4"
-        android:id="@+id/imageView5"
-        android:layout_gravity="center_vertical" />
-
-    <ImageView
-        android:layout_width="367dp"
-        android:layout_height="254dp"
-        app:srcCompat="@drawable/itachosushi"
-        android:id="@+id/imageView"
-        android:adjustViewBounds="true"
-        android:layout_gravity="right" />
 
     <Button
         android:text="Menu"
@@ -73,16 +50,82 @@
         android:id="@+id/button2"
         android:elevation="0dp"
         android:layout_gravity="right|center_vertical"
-        android:layout_marginTop="5dp" />
+        android:layout_marginTop="100dp"
+        android:layout_marginRight="25dp" />
 
     <Button
-        android:text="Menu"
-        android:layout_width="127dp"
+        android:text="Get Directions"
+        android:layout_width="291dp"
         android:layout_height="wrap_content"
         android:id="@+id/button"
         android:elevation="0dp"
         android:layout_gravity="right|center_vertical"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="123dp" />
+        android:layout_marginTop="100dp"
+        android:layout_marginRight="163dp" />
+
+    <ImageView
+        android:layout_width="479dp"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/itachosushi"
+        android:id="@+id/imageView"
+        android:adjustViewBounds="true"
+        android:layout_gravity="right"
+        android:layout_marginBottom="30dp" />
+
+    <ImageView
+        android:layout_width="418dp"
+        android:layout_height="405dp"
+        app:srcCompat="@drawable/robot4"
+        android:id="@+id/imageView5"
+        android:layout_gravity="center_vertical" />
+
+    <TextView
+        android:text="Itacho Sushi"
+        android:layout_width="478dp"
+        android:layout_height="369dp"
+        android:id="@+id/textView"
+        android:background="@android:color/background_light"
+        android:textColor="?attr/colorPrimary"
+        android:paddingLeft="20dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="10dp"
+        android:paddingTop="15dp"
+        android:layout_gravity="right|center_vertical"
+        android:layout_marginTop="120dp"
+        android:textSize="28sp"
+        android:gravity="center_horizontal" />
+
+    <TextView
+        android:text="Japanese Restaurant"
+        android:layout_width="421dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView2"
+        android:textColor="@color/black_overlay"
+        android:layout_gravity="center_vertical|center_horizontal"
+        android:layout_marginLeft="245dp"
+        android:layout_marginBottom="4dp"
+        android:textSize="12sp"
+        android:gravity="center_horizontal" />
+
+    <ImageView
+        android:layout_width="33dp"
+        android:layout_height="15dp"
+        app:srcCompat="@drawable/location"
+        android:id="@+id/imageView4"
+        android:layout_gravity="center_vertical|center_horizontal"
+        android:layout_marginLeft="180dp"
+        android:layout_marginTop="25dp" />
+
+    <TextView
+        android:text="Terminal 3, #03-30/31"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView3"
+        android:textColor="?attr/colorPrimary"
+        android:gravity="center_vertical|center_horizontal"
+        android:layout_gravity="center_vertical|center_horizontal"
+        android:layout_marginTop="25dp"
+        android:layout_marginLeft="250dp"
+        android:textSize="12sp" />
 
 </FrameLayout>
