--- a/app/src/main/res/layout-land/activity_recommend.xml
+++ b/app/src/main/res/layout-land/activity_recommend.xml
@@ -1,6 +1,5 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:app2=""
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -42,28 +41,6 @@
         </LinearLayout>
 
     </FrameLayout>
-
-    <Button
-        android:text="Menu"
-        android:layout_width="127dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/button2"
-        android:elevation="0dp"
-        android:layout_gravity="right|center_vertical"
-        android:layout_marginTop="100dp"
-        android:layout_marginRight="25dp"
-        android:padding="22dp" />
-
-    <Button
-        android:text="Get Directions"
-        android:layout_width="291dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/button"
-        android:elevation="0dp"
-        android:layout_gravity="right|center_vertical"
-        android:layout_marginTop="100dp"
-        android:layout_marginRight="163dp"
-        android:background="@android:color/holo_orange_dark" />
 
     <ImageView
         android:layout_width="479dp"
@@ -129,5 +106,31 @@
         android:layout_marginTop="25dp"
         android:layout_marginLeft="250dp"
         android:textSize="12sp" />
+    <Button
+        android:text="Menu"
+        android:layout_width="127dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/button2"
+        android:elevation="0dp"
+        android:layout_gravity="right|center_vertical"
+        android:layout_marginTop="100dp"
+        android:layout_marginRight="25dp" />
+
+    <Button
+        android:text="Get Directions"
+        android:layout_width="291dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/button"
+        android:elevation="0dp"
+        android:layout_gravity="right|center_vertical"
+        android:layout_marginTop="100dp"
+        android:layout_marginRight="163dp"
+        android:background="@android:color/holo_orange_dark" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/fullscreen_btn"
+        android:background="#00000000"/>
 
 </FrameLayout>
