updated greeting page

--- a/app/src/main/res/layout/activity_greeting.xml
+++ b/app/src/main/res/layout/activity_greeting.xml
@@ -3,22 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fff"
+    android:background="#62cdba"
     tools:context="com.companio.greet.GreetingActivity">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
          TextureView, etc. -->
-    <TextView
-        android:id="@+id/fullscreen_content"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:keepScreenOn="true"
-        android:text="@string/dummy_content"
-        android:textColor="#fff"
-        android:textSize="50sp"
-        android:textStyle="normal" />
 
     <!-- This FrameLayout insets its children based on system windows using
          android:fitsSystemWindows. -->
@@ -31,51 +21,43 @@
             android:id="@+id/fullscreen_content_controls"
             style="?metaButtonBarStyle"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="bottom|center_horizontal"
             android:background="@color/black_overlay"
             android:orientation="horizontal"
             tools:ignore="UselessParent">
 
-            <Button
-                android:id="@+id/dummy_button"
-                style="?metaButtonBarButtonStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/dummy_button" />
-
         </LinearLayout>
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/departure"
-            android:id="@+id/imageView"
-            android:scaleType="fitXY"
-            android:alpha="0.7" />
 
     </FrameLayout>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/fullscreen_btn"
+        android:background="#00000000"/>
 
     <ImageView
         android:layout_width="239dp"
         android:layout_height="426dp"
         app:srcCompat="@drawable/robot4"
         android:id="@+id/imageView2"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
-        android:text="TextView"
-        android:layout_width="wrap_content"
+        android:text="@string/title_activity_greeting_message"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView"
-        tools:text="@string/title_activity_greeting_message"
         android:textAlignment="center"
         android:textSize="24sp"
-        android:textColor="@android:color/background_light"
+        android:textColor="@android:color/black"
         android:allowUndo="false"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        android:alpha="0.5"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="212dp" />
 
 </RelativeLayout>
