--- a/app/src/main/res/layout/activity_greeting.xml
+++ b/app/src/main/res/layout/activity_greeting.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#62cdba"
-    tools:context="com.companio.greet.GreetingActivity">
+    tools:context="com.companio.greet.GreetingActivity"
+    android:id="@+id/greet_root">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
@@ -41,7 +42,7 @@
     <ImageView
         android:layout_width="239dp"
         android:layout_height="426dp"
-        app:srcCompat="@drawable/robot4"
+        app:srcCompat="@drawable/robot5"
         android:id="@+id/imageView2"
         android:layout_centerVertical="true"
         android:layout_alignParentStart="true" />
@@ -59,5 +60,10 @@
         android:layout_centerVertical="true"
         android:layout_alignParentStart="true"
         android:layout_marginStart="212dp" />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/fullscreen_greet_btn"
+        android:background="#00000000"/>
 
 </RelativeLayout>
