--- a/app/src/main/res/layout/activity_greeting.xml
+++ b/app/src/main/res/layout/activity_greeting.xml
@@ -39,10 +39,11 @@
         android:background="#00000000"/>
 
     <ImageView
-        android:layout_width="239dp"
-        android:layout_height="426dp"
+        android:layout_width="350dp"
+        android:layout_height="500dp"
         app:srcCompat="@drawable/robot4"
         android:id="@+id/imageView2"
+        android:layout_marginLeft="-20dp"
         android:layout_centerVertical="true"
         android:layout_alignParentStart="true" />
 
@@ -52,7 +53,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/textView"
         android:textAlignment="center"
-        android:textSize="24sp"
+        android:textSize="28sp"
         android:textColor="@android:color/black"
         android:allowUndo="false"
         android:alpha="0.5"
