--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -45,7 +45,7 @@
 
         <ImageButton android:id="@+id/facebook"
             android:layout_width="150dp"
-            android:layout_height="50dp"
+            android:layout_height="45dp"
             android:background="@drawable/facebook"
             android:layout_toRightOf="@id/google"
             android:layout_alignTop="@id/google" />
@@ -64,7 +64,8 @@
             android:layout_margin="5dp"
             android:text="Register" />
 
-        <Button android:layout_width="wrap_content"
+        <Button android:id="@+id/login"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/border"
