Wired up everything

--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.companio.vr.CameraActivity">
+    tools:context="com.companio.vr.CameraActivity"
+    android:id="@+id/camera_root">
 
     <org.rajawali3d.surface.RajawaliSurfaceView
         android:id="@+id/surfaceview"
