--- a/app/src/main/res/drawable/circular.xml
+++ b/app/src/main/res/drawable/circular.xml
@@ -1,4 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    android:innerRadiusRatio="2.3"
+    android:shape="ring"
+    android:thickness="3.8sp" >
+    <solid android:color="@android:color/holo_blue_dark" />
+</shape>
