--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -57,7 +57,8 @@
         android:layout_alignParentBottom="true"
         android:orientation="horizontal">
 
-        <Button android:layout_width="wrap_content"
+        <Button android:id="@+id/register"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/border"
