--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:keepScreenOn="true"
-        android:text="ompanio."
+        android:text="ompan.io"
         android:layout_toRightOf="@id/title"
         android:layout_marginLeft="-250px"
         android:textColor="@android:color/white"
